z-index for the popup menu has been fixed

--- a/frontend/src/cssFiles/topbar.css
+++ b/frontend/src/cssFiles/topbar.css
@@ -26,6 +26,7 @@
   border-width: 1px;  
   position: absolute;
   display: none;
+  z-index: 1;
 }
 
 .popup-menu-item{
